# genisis-rs

./: .architect_in_progress  .architect_in_progress.md  .gitignore  .janitor-output-1770687957419.md  .prompt-output-1770737625952.md  .sprint_complete  ARCHITECTURE.md  ARCHITECT_STATE.md  BACKLOG.md  BLOCKERS.md  COMPLETED.md  Cargo.toml  LEARNINGS.md  PRD.md  TODO.md  commit-msg.md  genesis.toml
.state/: architect.state.json  changes-24hr.md  changes-2hr.md  changes-30min.md  changes-6hr.md  cleanup-report-2026-02-10T14:32:30Z.md  janitor.state.json  prompt.state.json
assets/: point_sprite.wgsl
comms/: README.md
comms/archive/: 2026-02-09_time-acceleration-starting-value.md  architect-ambiguity-phase1-feature-scope-2026-02-09.md  architect-gap-analysis-phase2-missing-tasks-2026-02-09.md  architect-session-2026-02-10-clarification-summary.md  build-verification-2026-02-09.md  (+37 more)
genesis-core/: Cargo.toml  genesis.toml.bak  test_genesis_invalid.toml
genesis-core/src/: config.rs  events.rs  lib.rs
genesis-core/src/epoch/: camera_config.rs  mod.rs  singularity.rs
genesis-core/src/physics/: mod.rs
genesis-core/src/time/: mod.rs
genesis-physics/: Cargo.toml
genesis-physics/src/: lib.rs
genesis-physics/src/cosmology/: mod.rs
genesis-physics/src/gravity/: mod.rs
genesis-physics/src/inflaton/: mod.rs
genesis-physics/src/integrator/: mod.rs
genesis-physics/src/nucleosynthesis/: mod.rs
genesis-physics/src/perturbations/: mod.rs
genesis-physics/src/perturbations/fft/: mod.rs
genesis-physics/tests/: fft_integration.rs  gaussian_random_field_integration.rs
genesis-render/: Cargo.toml
genesis-ui/: Cargo.toml
genesis-ui/src/: lib.rs
genesis-ui/src/overlay/: camera_fade.rs  mod.rs
genesis-ui/src/timeline/: mod.rs
plans/: architect-gap-analysis-2026-02-09.md  architect-gap-analysis-2026-02-10-v2.md  architect-gap-analysis-2026-02-10.md  architect-session-2026-02-09.md  architect-session-report-2026-02-09.md  architect-session-summary-2026-02-09.md  orchestrator-session-plan-2026-02-09.md  session-report.md
reports/: architect-session-2026-02-10-v2.md  architect-session-2026-02-10.md  camera-interpolation-analysis-2026-02-10.md  exponential-scale-factor-verification-2026-02-10.md  gap-analysis-2026-02-09-v2.md  gap-analysis-2026-02-09.md  gap-analysis-phase1-2026-02-09.md  orchestrator-session-2026-02-10-v2.md  orchestrator-session-2026-02-10.md  phase4-test-report-2026-02-09.md  summary-architect-session-2026-02-09.html
src/: main.rs
(+36 files in other folders)
