[package]
name = "genesis-core"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
bevy = { workspace = true }
