[package]
name = "genesis-physics"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "genesis_physics"
path = "src/lib.rs"

[dependencies]
bevy = { workspace = true }
glam = "0.29"
nalgebra = "0.33"
wgpu = "22"
serde = { version = "1.0", features = ["derive"] }
genesis-core = { path = "../genesis-core" }
rand = "0.8"
rustfft = "6.1"

[dev-dependencies]
bevy = { workspace = true }
