[package]
name = "genesis-ui"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
genesis-core = { path = "../genesis-core" }
genesis-render = { path = "../genesis-render" }

[dev-dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
